8226287: Make process_users_of_allocation handle gc barriers

Reviewed-by: kvn, roland